@@ -22,9 +22,9 @@ import org.apache.struts2.util.IteratorFilterSupport.EnumerationIterator;
 
 import java.lang.reflect.Array;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Enumeration;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Map;
 
 /**
@@ -89,7 +89,7 @@ public class MakeIterator {
         } else if (value instanceof Enumeration) {
             iterator = new EnumerationIterator((Enumeration) value);
         } else {
-            iterator = Arrays.asList(value).iterator();
+            iterator = List.of(value).iterator();
         }
 
         return iterator;
